--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
  PORT=3000
- Mongo_URI="mongodb+srv://hammadsunsara2620:QYQ6KYROAQBzqytY@chatapp.1vdxv.mongodb.net/?retryWrites=true&w=majority&appName=chatapp"
+ Mongo_URI="mongodb+srv://hammadsunsara9:7WyME5F64YdArgG6@hammad.te32t.mongodb.net/?retryWrites=true&w=majority&appName=Hammad"
  JWT_SECRET="hammad"
+ 
